refactor: simplify overdue books conversion to LendingDetail in LendingService